@@ -112,36 +112,39 @@ PUBLIC DECLARE SUB WINDOW (BYVAL id AS INTEGER, BYVAL title AS STRING = NULL, _
                            _COORD2(BYVAL s1 AS BOOLEAN=FALSE, BYVAL x1 AS INTEGER=-1, BYVAL y1 AS INTEGER=-1, BYVAL s2 AS BOOLEAN=FALSE, BYVAL x2 AS INTEGER=-1, BYVAL y2 AS INTEGER=-1), _
                            BYVAL flags AS INTEGER=15, BYVAL scrid AS INTEGER = 0)
 
-PUBLIC DECLARE SUB WINDOW CLOSE   (BYVAL id AS INTEGER = 0)
-PUBLIC DECLARE SUB WINDOW OUTPUT  (BYVAL id AS INTEGER = 0)
-PUBLIC DECLARE SUB ON WINDOW CALL (BYVAL p AS SUB)
-PUBLIC DECLARE FUNCTION WINDOW    (BYVAL n AS INTEGER) AS ULONG
+PUBLIC DECLARE SUB WINDOW CLOSE         (BYVAL id AS INTEGER = 0)
+PUBLIC DECLARE SUB WINDOW OUTPUT        (BYVAL id AS INTEGER = 0)
+PUBLIC DECLARE SUB ON WINDOW CALL       (BYVAL p AS SUB)
+PUBLIC DECLARE FUNCTION WINDOW          (BYVAL n AS INTEGER) AS ULONG
 PUBLIC DECLARE SUB MOUSE ON
 PUBLIC DECLARE SUB MOUSE OFF
-PUBLIC DECLARE SUB ON MOUSE CALL  (BYVAL p AS SUB)
-PUBLIC DECLARE FUNCTION MOUSE     (BYVAL n AS INTEGER) AS INTEGER
+PUBLIC DECLARE SUB ON MOUSE CALL        (BYVAL p AS SUB)
+PUBLIC DECLARE FUNCTION MOUSE           (BYVAL n AS INTEGER) AS INTEGER
+PUBLIC DECLARE SUB MOUSE MOTION ON
+PUBLIC DECLARE SUB MOUSE MOTION OFF
+PUBLIC DECLARE SUB ON MOUSE MOTION CALL (BYVAL p AS SUB)
 PUBLIC DECLARE SUB SLEEP
-PUBLIC DECLARE SUB SLEEP FOR      (BYVAL s AS SINGLE)
+PUBLIC DECLARE SUB SLEEP FOR            (BYVAL s AS SINGLE)
 
 PUBLIC DECLARE SUB CLS
-PUBLIC DECLARE SUB LINE (_COORD2(BYVAL s1 AS BOOLEAN=FALSE, BYVAL x1 AS INTEGER=-1, BYVAL y1 AS INTEGER=-1, BYVAL s2 AS BOOLEAN=FALSE, BYVAL x2 AS INTEGER=-1, BYVAL y2 AS INTEGER=-1), _
-                         BYVAL c AS INTEGER=-1, _LINEBF(BYVAL bf AS INTEGER=0) )
-PUBLIC DECLARE SUB PSET (_COORD(BYVAL s AS BOOLEAN=FALSE, BYVAL x1 AS INTEGER, BYVAL y AS INTEGER), BYVAL c AS INTEGER=-1)
-PUBLIC DECLARE SUB PALETTE (BYVAL cid AS INTEGER, BYVAL red AS SINGLE, BYVAL green AS SINGLE, BYVAL blue AS SINGLE)
-PUBLIC DECLARE SUB COLOR   (BYVAL fg AS INTEGER=-1, BYVAL bg AS INTEGER=-1, BYVAL o AS INTEGER=-1)
-PUBLIC DECLARE SUB PAINT (_COORD(BYVAL s AS BOOLEAN=FALSE, BYVAL x AS INTEGER, BYVAL y AS INTEGER), BYVAL pc AS INTEGER=-1, BYVAL bc AS INTEGER=-1)
-PUBLIC DECLARE SUB AREA (_COORD(BYVAL s AS BOOLEAN=FALSE, BYVAL x1 AS INTEGER, BYVAL y AS INTEGER))
-PUBLIC DECLARE SUB AREAFILL (BYVAL mode AS INTEGER=0)
-PUBLIC DECLARE SUB AREA OUTLINE (BYVAL enabled AS BOOLEAN)
+PUBLIC DECLARE SUB LINE                 (_COORD2(BYVAL s1 AS BOOLEAN=FALSE, BYVAL x1 AS INTEGER=-1, BYVAL y1 AS INTEGER=-1, BYVAL s2 AS BOOLEAN=FALSE, BYVAL x2 AS INTEGER=-1, BYVAL y2 AS INTEGER=-1), _
+                                         BYVAL c AS INTEGER=-1, _LINEBF(BYVAL bf AS INTEGER=0) )
+PUBLIC DECLARE SUB PSET                 (_COORD(BYVAL s AS BOOLEAN=FALSE, BYVAL x1 AS INTEGER, BYVAL y AS INTEGER), BYVAL c AS INTEGER=-1)
+PUBLIC DECLARE SUB PALETTE              (BYVAL cid AS INTEGER, BYVAL red AS SINGLE, BYVAL green AS SINGLE, BYVAL blue AS SINGLE)
+PUBLIC DECLARE SUB COLOR                (BYVAL fg AS INTEGER=-1, BYVAL bg AS INTEGER=-1, BYVAL o AS INTEGER=-1)
+PUBLIC DECLARE SUB PAINT                (_COORD(BYVAL s AS BOOLEAN=FALSE, BYVAL x AS INTEGER, BYVAL y AS INTEGER), BYVAL pc AS INTEGER=-1, BYVAL bc AS INTEGER=-1)
+PUBLIC DECLARE SUB AREA                 (_COORD(BYVAL s AS BOOLEAN=FALSE, BYVAL x1 AS INTEGER, BYVAL y AS INTEGER))
+PUBLIC DECLARE SUB AREAFILL             (BYVAL mode AS INTEGER=0)
+PUBLIC DECLARE SUB AREA OUTLINE         (BYVAL enabled AS BOOLEAN)
 
-PUBLIC DECLARE SUB PATTERN (BYVAL lineptrn AS UINTEGER = &HFFFF, BYREF areaptrn() AS INTEGER = NULL)
+PUBLIC DECLARE SUB PATTERN              (BYVAL lineptrn AS UINTEGER = &HFFFF, BYREF areaptrn() AS INTEGER = NULL)
 PUBLIC DECLARE SUB PATTERN RESTORE
 
-PUBLIC DECLARE FUNCTION INKEY$ ()
+PUBLIC DECLARE FUNCTION INKEY$          ()
 
 ' ON TIMER support
 
-PUBLIC DECLARE SUB ON TIMER CALL (BYVAL id AS INTEGER, BYVAL seconds AS SINGLE, BYVAL p AS SUB)
-PUBLIC DECLARE SUB TIMER ON      (BYVAL id AS INTEGER)
-PUBLIC DECLARE SUB TIMER OFF     (BYVAL id AS INTEGER)
+PUBLIC DECLARE SUB ON TIMER CALL        (BYVAL id AS INTEGER, BYVAL seconds AS SINGLE, BYVAL p AS SUB)
+PUBLIC DECLARE SUB TIMER ON             (BYVAL id AS INTEGER)
+PUBLIC DECLARE SUB TIMER OFF            (BYVAL id AS INTEGER)
 
